# club-mutant

./: .claude  .gitignore  CLAUDE.md  Dockerfile.server  PROJECT_CONTEXT.md  docker-compose.dev.yml  fly.server.toml  netlify.toml  openmemory.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md
client/: README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client-3d/: CLAUDE.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client-dream/: index.html  package.json  tsconfig.json  vite.config.ts
conversion/: frames-map.example.json
docs/: DJ_QUEUE_SYSTEM.md  README.md  bg-video-toggle-placement.md  booth-queue-decoupling-fix.md  dj-playlists-vite-plan.md  dj-queue-optimization-plan.md  http2-server-push.md  load-testing.md  multiplayer-connection-optimizations.md  music-sync-resync-plan.md  performance-sync-audit.md  production-debugging-caddy-connections.md  rust-po-provider.md  rusty-ytdl-exploration.md  rusty-ytdl-hybrid-plan.md  spritesheet-extraction.md  youtube-api-deployment.md  youtube-ip-blocking-workarounds.md  youtube-service-migration.md
loadtest/: benchmark.ts  dj-scenario.ts  package.json  patch-fetch.ts  scenario.ts  test-connect.ts
nakama/: CLAUDE.md
scripts/: build-models.mjs  convert-to-webp.sh  generate-dream-tilesets.mjs  update-atlas-webp.js  update-client-imports.sh  (+1 more)
services/rusty-ytdl-hybrid/: Cargo.toml  Dockerfile  README.md
services/rusty-ytdl-hybrid/examples/: test_ytdlp_ejs.rs
services/rusty-ytdl-hybrid/src/: main.rs  resolver.rs
(+517 files in other folders)
